--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.4",
-    "jspdf": "^4.1.0",
     "html2canvas": "^1.4.1",
+    "jspdf": "^4.1.0",
+    "pdf-lib": "^1.17.1",
+    "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-signature-canvas": "^1.1.0-alpha.2"
   },
