--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^4.1.0",
     "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.4.624",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-signature-canvas": "^1.1.0-alpha.2"
